# Look4TRs

./: CMakeLists.txt  README.md
src/: divideGenomeIntoChromosomesEfficient.pl
src/align/: GlobAlignE.cpp  GlobAlignE.h  RepeatAlignE.cpp  RepeatAlignE.h
src/cluster/: DivergencePoint.cpp  DivergencePoint.h  Feature.cpp  Feature.h  Point.h  Progress.cpp  Progress.h  Selector.cpp  Selector.h
src/exception/: FileDoesNotExistException.cpp  InvalidInputException.cpp  InvalidOperationException.h  InvalidStateException.cpp
src/matrix/: GLM.cpp  GLM.h  Matrix.cpp  Matrix.h
src/motif/: FindMotif.cpp  FindMotif.h
src/mutate/: HandleSeq.cpp  HandleSeq.h  MultiMute.cpp  SingMute.cpp  SingMute.h
src/nonltr/: Chromosome.cpp  Chromosome.h  ChromosomeOneDigit.cpp  ChromosomeOneDigit.h  ChromosomeRandom.cpp  ChromosomeRandom.h  ChromosomeReadTR.cpp  ChromosomeReadTR.h  ChromosomeSelfTR.cpp  ChromosomeSelfTR.h  ChromosomeTR.cpp  ChromosomeTR.h  HMM.cpp  HMM.h  IChromosome.h  KmerHashTable.cpp  KmerHashTable.h
src/satellites/: Client_Scanner.cpp  Client_Scanner.h  Client_Trainer.cpp  Client_Trainer.h  Executor.cpp  Executor.h  IClient.cpp  IClient.h  Look4TRs.cpp  ScorerAdjusted.cpp  ScorerAdjusted.h  ScorerSat.cpp  ScorerSat.h
src/train/: Predictor.cpp  Predictor.h
src/utility/: HashMaker.cpp  HashMaker.h  ILocation.h  Location.cpp  Location.h  RegionList.cpp  RegionList.h  Util.cpp  Util.h
